# graphics_projects

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
ext/glad/include/glad/: glad.h
objects/: cornell-adj.scene
src/API/: main.cpp  quad.glsl.fs
src/cloth/: link.hpp  main.cpp  point_mass.hpp  simulation.cpp  simulation.hpp  simulation_constants.hpp  simulation_grid.cpp  simulation_grid.hpp
src/cloth/shaders/: cloth_compute.glsl.comp  grid.glsl.fs  grid.glsl.vs
src/common/: TODO.txt  aabb.cpp  aabb.hpp  debug_quad.hpp  font.glsl.fs  font.glsl.vs  font_engine.cpp  font_engine.hpp  glm_extended.hpp  histogram.hpp  logfile.cpp  logfile.hpp  model.hpp  model_loader.cpp  movement_direction.hpp  perlin.cpp  perlin.hpp  perlin_noise_2d.glsl.comp  view.cpp  view.hpp  window_manager.cpp  window_manager.hpp
src/curved_surface/: fragment.glsl.fs  main.cpp  tcs.glsl.tcs  tes.glsl.tes
src/fluid_simulation/: grid.glsl.fs  grid.glsl.vs  main.cpp  notes.txt
src/foliage/: grass.cpp  grass.glsl.fs  grass.glsl.vs  plane.glsl.fs  plane.glsl.vs  position_assignment.glsl.comp
src/geometry_shader/: fragment.glsl.fs  geometry.glsl.gs  main.cpp  vertex.glsl.vs
src/graph_plotter/: graph.glsl.fs  graph.glsl.vs  lines.glsl.fs  main.cpp  quad.glsl.fs  quad.glsl.vs  ui.cpp  ui.hpp
src/mirror/: frag.glsl.fs  main.cpp  vert.glsl.vs
src/particle_physics/: ballistics.hpp  particle.cpp  particle.hpp
src/point_lights/: fragment.glsl.fs  main.cpp  vertex.glsl.vs
src/projectiles/: main.cpp  quad.glsl.fs  quad.glsl.vs  vertex.glsl.vs
src/questions/: frag.glsl.fs  main.cpp  quad.glsl.fs  scene.glsl.fs  scene.glsl.vs  vert.glsl.vs
src/raymarching/: main.cpp  quad_shader.glsl.fs
src/shadow_map/: light.glsl.vs  main.cpp  quad.glsl.fs  quad.glsl.vs  shadow.glsl.fs  shadow.glsl.vs
src/shapes/: sphere_mesh.cpp  sphere_mesh.hpp
src/ssao/: box_blur.glsl.fs  box_blur.glsl.vs  g_shader.glsl.fs  g_shader.glsl.vs  main.cpp  quadshader.glsl.fs  quadshader.glsl.vs  ssao_shader.glsl.fs  ssao_shader.glsl.vs
src/ssr/: g_pass.glsl.fs  g_pass.glsl.vs  main.cpp  quad.glsl.vs  quad_depth.glsl.fs  ssr.glsl.comp
src/tessellation_shader/: fragment.glsl.fs  main.cpp  tess_control.glsl.tcs  tess_eval.glsl.tes  vertex.glsl.vs
src/test_environment/: circle.cpp  circle.glsl.fs  circle.glsl.vs  rotate.glsl.fs  rotate.glsl.vs
src/volumetric_lighting/: main.cpp  notes.txt
